--- a/low_manhattan_sim/config.json
+++ b/low_manhattan_sim/config.json
@@ -4,6 +4,9 @@
 	"dir": "low_manhattan_sim/",
 	"roadnetFile": "low_manhattan.json",
 	"flowFile": "low_manhattan_flow.json",
+	"max_steps": 500,
+	"cars_per_step": 1,
+	"init_cars": 300,
 	"rlTrafficLight": false,
 	"saveReplay": true,
 	"roadnetLogFile": "replay_roadnet.json",
