--- a/groningen_sim/config.json
+++ b/groningen_sim/config.json
@@ -4,9 +4,12 @@
 	"dir": "groningen_sim/",
 	"roadnetFile": "groningen.json",
 	"flowFile": "groningen_flow.json",
+	"max_steps": 500,
+	"cars_per_step": 1,
+	"init_cars": 300,
 	"rlTrafficLight": false,
-	"laneChange": false,
 	"saveReplay": true,
 	"roadnetLogFile": "replay_roadnet.json",
 	"replayLogFile": "replay.txt"
+
 }
