--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+astar==0.92
 matplotlib==3.3.1
 mesa==0.8.7
 osmnx==0.15.1
 seaborn==0.11.0
+sphinx==3.3.0
+sphinx-rtd-theme==0.5.0
 
 pytest==6.1.1
 pytest-cov==2.10.1
